--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 				<div class="container">
 					<div class="donate__inner">
 						<div class="donate__img">
-							<img class="donate__image" src="../images/donate_dog.png" alt="">
+							<img class="donate__image" src="images/donate_dog.png" alt="">
 						</div>
 						<div class="donate__descr">
 							<h2 class="donate__title title">
