--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 				           		Вы можете пожертвовать свои средства с любого банка, переводом на наш счёт
 				           	</p>
 				           	<p class="donate__number">
-				           		<img class="donate__card" src="../images/icon/donate_card.png" alt=""> 74202 **** **** 8141 7435
+				           		<img class="donate__card" src="images/icon/donate_card.png" alt=""> 74202 **** **** 8141 7435
 				           	</p>
 				           	<p class="donate__text">
 				           		Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Переписали родного, рыбными lorem грустный рыбного своего, знаках великий назад путь языком букв, образ живет дороге. Одна рыбного приставка страна.
@@ -291,13 +291,13 @@
 						<ul class="footer__list">
 							<li class="footer__list-item">
 								<a class="footer__list-link" href="email:example@gmail.com">
-									<img class="footer__icon" src="../images/icon/icon_email.png" alt="">
+									<img class="footer__icon" src="images/icon/icon_email.png" alt="">
 									example@gmail.com
 								</a>
 							</li>
 							<li class="footer__list-item">
 								<a class="footer__list-link" href="tel:12345678910111213">
-									<img class="footer__icon" src="../images/icon/icon_tel.png" alt="">
+									<img class="footer__icon" src="images/icon/icon_tel.png" alt="">
 									+12345678910111213
 								</a>
 							</li>
@@ -310,13 +310,13 @@
 						<ul class="footer__list">
 							<li class="footer__list-item">
 								<a class="footer__list-link" href="">
-									<img class="footer__icon" src="../images/icon/icon_position.png" alt="">
+									<img class="footer__icon" src="images/icon/icon_position.png" alt="">
 									Бостон, Центральная улица
 								</a>
 							</li>
 							<li class="footer__list-item">
 								<a class="footer__list-link" href="">
-									<img class="footer__icon" src="../images/icon/icon_position.png" alt="">
+									<img class="footer__icon" src="images/icon/icon_position.png" alt="">
 									Лондон, Южный парк, 18-я
 								</a>
 							</li>
